# docs/swagger.json
@@ -81,40 +81,6 @@
             }
         },
         "/api/product": {
-            "get": {
-                "description": "Get All Product",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Get All Product",
-                "operationId": "Get All Product",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "Create Product",
                 "consumes": [
@@ -159,7 +125,43 @@
                 }
             }
         },
-        "/api/product/:id": {
+        "/api/product/all": {
+            "get": {
+                "description": "Get All Product",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get All Product",
+                "operationId": "Get All Product",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/product/{id}": {
             "get": {
                 "description": "Find Product By ID",
                 "consumes": [
@@ -180,9 +182,10 @@
                     },
                     {
                         "type": "string",
-                        "description": "name search by id",
+                        "description": "ID of the product to be find",
                         "name": "id",
-                        "in": "query"
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -201,15 +204,15 @@
                 }
             },
             "put": {
-                "description": "Find Product By ID",
+                "description": "Update Product By ID",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Find Product By ID",
-                "operationId": "Find Product By ID",
+                "summary": "Update Product By ID",
+                "operationId": "Update Product By ID",
                 "parameters": [
                     {
                         "type": "string",
@@ -220,9 +223,10 @@
                     },
                     {
                         "type": "string",
-                        "description": "name search by id",
+                        "description": "ID of the product to be updated",
                         "name": "id",
-                        "in": "query"
+                        "in": "path",
+                        "required": true
                     },
                     {
                         "description": "request body",
@@ -250,15 +254,15 @@
                 }
             },
             "delete": {
-                "description": "Find Product By ID",
+                "description": "Delete Product By ID",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Find Product By ID",
-                "operationId": "Find Product By ID",
+                "summary": "Delete Product By ID",
+                "operationId": "Delete Product By ID",
                 "parameters": [
                     {
                         "type": "string",
@@ -269,9 +273,10 @@
                     },
                     {
                         "type": "string",
-                        "description": "name search by id",
+                        "description": "ID of the product to be delete",
                         "name": "id",
-                        "in": "query"
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
